--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,52 @@
-name: Build and Publish Plan Cabinet App
+name: Publish Win-x64
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ master ]
+  workflow_dispatch:
 
 jobs:
-  build-windows:
-    runs-on: windows-latest
+  build:
+    runs-on: windows-2022
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-      - name: Set up .NET
-        uses: actions/setup-dotnet@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '8.0.x'
+        
+    - name: Restore dependencies
+      run: dotnet restore "Plan_Cabinet.csproj"
+    
+    - name: Build and Package MAUI App for Windows
+      run: dotnet publish "Plan_Cabinet.csproj" -f net8.0-windows10.0.22000.0 -c Release --no-restore
+      env:
+        GRAPH_CLIENT_ID: ${{ secrets.GRAPH_CLIENT_ID }}
+        GRAPH_TENANT_ID: ${{ secrets.GRAPH_TENANT_ID }}
+        GRAPH_CLIENT_SECRET: ${{ secrets.GRAPH_CLIENT_SECRET }}
+        GRAPH_DRIVE_ID: ${{ secrets.GRAPH_DRIVE_ID }}
+      
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: Plan_Cabinet-installer
+        path: ${{ github.workspace }}/Plan_Cabinet/bin/Release/net8.0-windows10.0.22000.0/win10-x64/
+        retention-days: 7
+
+  deploy-pages:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
-          dotnet-version: '8.0.x' # Specifies .NET 8.0 for MAUI projects
-
-      - name: Restore dependencies
-        run: dotnet restore "Plan_Cabinet.csproj"
-
-      - name: Build and Publish MAUI App for Windows
-        run: dotnet publish "Plan_Cabinet.csproj" --configuration Release -f net8.0-windows10.0.22000.0 --no-self-contained
-        env:
-          GRAPH_CLIENT_ID: ${{ secrets.GRAPH_CLIENT_ID }}
-          GRAPH_TENANT_ID: ${{ secrets.GRAPH_TENANT_ID }}
-          GRAPH_CLIENT_SECRET: ${{ secrets.GRAPH_CLIENT_SECRET }}
-          GRAPH_DRIVE_ID: ${{ secrets.GRAPH_DRIVE_ID }}
+          name: Plan_Cabinet-installer
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: .
