--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Publish Win-x64
+name: Publish Win-x64 with ReadyToRun
 
 on:
   push:
@@ -10,20 +10,21 @@ jobs:
     runs-on: windows-2022
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Setup .NET
+    - name: Set up .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
         
-    - name: Install workloads
+    - name: Install Windows MAUI workloads
       run: dotnet workload install maui-windows --include-previews
     
-    - name: Restore dependencies
-      run: dotnet restore "Plan_Cabinet/Plan_Cabinet.csproj"
+    - name: Restore dependencies for Windows build
+      run: dotnet restore "Plan_Cabinet/Plan_Cabinet.csproj" --runtime win-x64
     
     - name: Build and Package MAUI App for Windows
       run: dotnet publish "Plan_Cabinet/Plan_Cabinet.csproj" -f net8.0-windows10.0.22000.0 -c Release --no-restore --runtime win-x64 --self-contained true /p:PublishReadyToRun=true
