--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Plan_Cabinet-installer
-        path: ${{ github.workspace }}/Plan_Cabinet/bin/Release/net8.0-windows10.0.22000.0/win-x64/
+        path: ${{ github.workspace }}/Plan_Cabinet/bin/x64/Release/net8.0-windows10.0.22000.0/win-x64/AppPackages
         retention-days: 7
 
   deploy-pages:
