--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Plan_Cabinet/Properties/launchSettings.json
+/Plan_Cabinet/Properties/launchSettings.json
