--- a/Plan_Cabinet/Plan_Cabinet.csproj
+++ b/Plan_Cabinet/Plan_Cabinet.csproj
@@ -47,14 +47,11 @@
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
     <AppInstallerUri>https://bpalmereng.github.io/Plan_Cabinet/</AppInstallerUri>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
-    <PublishReadyToRun>false</PublishReadyToRun>
+    <PublishAot>true</PublishAot>
     <UserSecretsId>d3c966ef-e108-40ef-9db5-6e7cb2574bbb</UserSecretsId>
     <SkipValidateMauiImplicitPackageReferences>true</SkipValidateMauiImplicitPackageReferences>
   </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
-    <PublishReadyToRun>false</PublishReadyToRun>
-  </PropertyGroup>  
+  
   
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-android|AnyCPU'">
     <ApplicationId>com.companyname.plancabinet</ApplicationId>
