Removed AOT from devloper and added AOT to final build in GIT

--- a/Plan_Cabinet/Plan_Cabinet.csproj
+++ b/Plan_Cabinet/Plan_Cabinet.csproj
@@ -47,7 +47,7 @@
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
     <AppInstallerUri>https://bpalmereng.github.io/Plan_Cabinet/</AppInstallerUri>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
-    <PublishAot>true</PublishAot>
+    <PublishAot Condition="'$(CI)' == 'true'">true</PublishAot>
     <UserSecretsId>d3c966ef-e108-40ef-9db5-6e7cb2574bbb</UserSecretsId>
     <SkipValidateMauiImplicitPackageReferences>true</SkipValidateMauiImplicitPackageReferences>
   </PropertyGroup>
@@ -68,6 +68,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-windows10.0.22000.0|AnyCPU'">
     <ApplicationId>com.companyname.plancabinet</ApplicationId>
     <ApplicationTitle>Plan Cabinet</ApplicationTitle>
+    <IsPublishable>True</IsPublishable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-android|x64'">
@@ -85,6 +86,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-windows10.0.22000.0|x64'">
     <ApplicationId>com.companyname.plancabinet</ApplicationId>
     <ApplicationTitle>Plan Cabinet</ApplicationTitle>
+    <IsPublishable>True</IsPublishable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-android|AnyCPU'">
@@ -102,6 +104,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-windows10.0.22000.0|AnyCPU'">
     <ApplicationId>com.companyname.plancabinet</ApplicationId>
     <ApplicationTitle>Plan Cabinet</ApplicationTitle>
+    <IsPublishable>True</IsPublishable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-android|x64'">
@@ -119,6 +122,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-windows10.0.22000.0|x64'">
     <ApplicationId>com.companyname.plancabinet</ApplicationId>
     <ApplicationTitle>Plan Cabinet</ApplicationTitle>
+    <IsPublishable>True</IsPublishable>
   </PropertyGroup>
 
   <PropertyGroup>
