--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,33 +19,40 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
-        
+
     - name: Install Windows MAUI workloads
       run: dotnet workload install maui-windows --include-previews
-    
+
     - name: Restore dependencies for Windows build
       run: dotnet restore "Plan_Cabinet/Plan_Cabinet.csproj" --runtime win-x64 /p:PublishReadyToRun=true
 
     - name: Import Signing Certificate
-      shell: powershell
+      shell: pwsh
       run: |
         $pfx_base64 = "${{ secrets.PFX_CERTIFICATE_BASE64 }}"
         $pfx_password = "${{ secrets.PFX_PASSWORD }}"
         $pfx_bytes = [System.Convert]::FromBase64String($pfx_base64)
         [System.IO.File]::WriteAllBytes("cert.pfx", $pfx_bytes)
-        
-        # Import the certificate into the certificate store
+
         $pfx_password_secure = ConvertTo-SecureString -String $pfx_password -AsPlainText -Force
         Import-PfxCertificate -FilePath "cert.pfx" -CertStoreLocation Cert:\CurrentUser\My -Password $pfx_password_secure
 
     - name: Build and Package MAUI App for Windows
-      run: dotnet publish "Plan_Cabinet/Plan_Cabinet.csproj" -f net8.0-windows10.0.22000.0 -c Release --no-restore --runtime win-x64 --self-contained true /p:PublishReadyToRun=true /p:Platform=x64 /p:AppxPackageSigningEnabled=true
+      run: dotnet publish "Plan_Cabinet/Plan_Cabinet.csproj" \
+        -f net8.0-windows10.0.22000.0 \
+        -c Release \
+        --no-restore \
+        --runtime win10-x64 \
+        --self-contained true \
+        /p:PublishReadyToRun=true \
+        /p:Platform=x64 \
+        /p:AppxPackageSigningEnabled=true
       env:
         GRAPH_CLIENT_ID: ${{ secrets.GRAPH_CLIENT_ID }}
         GRAPH_TENANT_ID: ${{ secrets.GRAPH_TENANT_ID }}
         GRAPH_CLIENT_SECRET: ${{ secrets.GRAPH_CLIENT_SECRET }}
         GRAPH_DRIVE_ID: ${{ secrets.GRAPH_DRIVE_ID }}
-      
+
     - name: Find Installer Package
       id: find_bundle
       shell: bash
