--- a/Plan_Cabinet/Plan_Cabinet.csproj
+++ b/Plan_Cabinet/Plan_Cabinet.csproj
@@ -1,57 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.22000.0</TargetFrameworks>
-    <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
-    <!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
-
-    <!-- Note for MacCatalyst:
-		The default runtime is maccatalyst-x64, except in Release config, in which case the default is maccatalyst-x64;maccatalyst-arm64.
-		When specifying both architectures, use the plural <RuntimeIdentifiers> instead of the singular <RuntimeIdentifier>.
-		The Mac App Store will NOT accept apps with ONLY maccatalyst-arm64 indicated;
-		either BOTH runtimes must be indicated or ONLY macatalyst-x64. -->
-    <!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
-
-    <!-- MAUI & App Info -->
+    <TargetFramework>net8.0-windows10.0.22000.0</TargetFramework>
     <OutputType>Exe</OutputType>
     <RootNamespace>Plan_Cabinet</RootNamespace>
     <UseMaui>true</UseMaui>
     <SingleProject>true</SingleProject>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <!-- Windows Runtime -->
-    <TargetFramework>net8.0-windows10.0.22000.0</TargetFramework>
     <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
     <SelfContained>true</SelfContained>
     <IsPublishable>true</IsPublishable>
-    <PublishReadyToRun>true</PublishReadyToRun>
-    <PropertyGroup>
-      <AppxBundle>Always</AppxBundle>
-      <AppxBundlePlatforms>x64</AppxBundlePlatforms>
-    </PropertyGroup>
 
-    <!-- Display name -->
-    <ApplicationTitle>Plan_Cabinet</ApplicationTitle>
-
-    <!-- App Identifier -->
-    <ApplicationId>com.companyname.plan_cabinet</ApplicationId>
-    
     <!-- Windows packaging -->
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>x64</AppxBundlePlatforms>
+
+    <!-- App info -->
+    <ApplicationTitle>Plan Cabinet</ApplicationTitle>
+    <ApplicationId>com.companyname.plancabinet</ApplicationId>
     <PackageId>PlanCabinet</PackageId>
     <PackageDisplayName>Plan Cabinet</PackageDisplayName>
-    <ApplicationId>com.companyname.plancabinet</ApplicationId>
-    <ApplicationTitle>Plan Cabinet</ApplicationTitle>
 
     <!-- Versions -->
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     <ApplicationVersion>1</ApplicationVersion>
 
-    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
-    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
-    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
     <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
-    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
+
     <Platforms>AnyCPU;x64</Platforms>
     <DefaultLanguage>en</DefaultLanguage>
     <GenerateAppInstallerFile>True</GenerateAppInstallerFile>
@@ -67,10 +45,7 @@
     <SkipValidateMauiImplicitPackageReferences>true</SkipValidateMauiImplicitPackageReferences>
 
     <!-- Force publish-ready output -->
-    <IsPublishable>true</IsPublishable>
-    <SelfContained>true</SelfContained>
     <PublishTrimmed>false</PublishTrimmed>
-    
   </PropertyGroup>
   
   
