--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,8 @@ jobs:
           GRAPH_CLIENT_SECRET: ${{ secrets.GRAPH_CLIENT_SECRET }}
           GRAPH_DRIVE_ID: ${{ secrets.GRAPH_DRIVE_ID }}
 
-      - name: Debug: List Publish Folder Tree with Sizes
+      - name: Debug & Find Installer Package
+        id: find_bundle
         shell: bash
         run: |
           PUBLISH_DIR="$GITHUB_WORKSPACE/Plan_Cabinet/bin/x64/Release/net8.0-windows10.0.22000.0/win-x64/AppPackages"
@@ -54,15 +55,15 @@ jobs:
             ls -lh "$dir"
           done
 
-      - name: Find Installer Package
-        id: find_bundle
-        shell: bash
-        run: |
-          FILE=$(find "$GITHUB_WORKSPACE/Plan_Cabinet/bin/x64/Release/net8.0-windows10.0.22000.0/win-x64/AppPackages" -type f \( -name "*.msixbundle" -o -name "*.msix" \) | head -n 1)
+          # Check for installer package
+          FILE=$(find "$PUBLISH_DIR" -type f \( -name "*.msixbundle" -o -name "*.msix" \) | head -n 1)
           if [ -z "$FILE" ]; then
-            echo "❌ No installer package (.msixbundle or .msix) found!"
+            echo "❌ ERROR: No MSIX or MSIXBUNDLE installer found in $PUBLISH_DIR"
             exit 1
+          else
+            echo "✅ Installer found: $FILE"
           fi
+
           echo "bundle_path=$FILE" >> $GITHUB_OUTPUT
 
       - name: Upload Installer Artifact
