--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,9 @@ jobs:
           Import-PfxCertificate -FilePath "cert.pfx" -CertStoreLocation Cert:\CurrentUser\My -Password $pfx_password_secure
 
       - name: Build and Package MAUI App for Windows
-        run: dotnet publish Plan_Cabinet.csproj -f net8.0-windows10.0.22000.0 -c Release --runtime win-x64 --self-contained true /p:PublishReadyToRun=false
+        working-directory: Plan_Cabinet
+        run: dotnet publish Plan_Cabinet.csproj -f net8.0-windows10.0.22000.0 -c Release --runtime win-x64 --self-contained true /p:PublishReadyToRun=false /p:Platform=x64 /p:AppxPackageSigningEnabled=true /p:AppxBundle=Always /p:AppxBundlePlatforms=x64
+
         env:
           GRAPH_CLIENT_ID: ${{ secrets.GRAPH_CLIENT_ID }}
           GRAPH_TENANT_ID: ${{ secrets.GRAPH_TENANT_ID }}
